--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi página html</title>
 </head>
 <body>
-    
+    <p>hola este es un ejemplo</p>
 </body>
 </html>
