Added azul.txt, login.txt and information in all documents

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Mi página html</title>
 </head>
 <body>
-    <p>hola este es un ejemplo</p>
+    <p>hola este es un ejemplo.</p>
+    <br>
+    <p>Azul School es Chevere.</p>
 </body>
 </html>
