Added information in index.html and information.txt

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <p>hola este es un ejemplo.</p>
     <br>
-    <p>Azul School es Chevere.</p>
+    <p>Azul School es Chevere y Azul School es la onda.</p>
+    
 </body>
 </html>
