Added welcome to my page

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Mi página html</title>
 </head>
 <body>
+    <h1>About me</h1>
+    <h2>i´m <span>Road</span></h2>
     <p>hola este es un ejemplo.</p>
     <br>
     <p>Azul School es Chevere y Azul School es la onda.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta eligendi quae neque quos itaque ex, natus alias inventore nobis amet ratione impedit numquam beatae placeat, quo, dolores esse atque animi?</p>
     
 </body>
 </html>
