--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Mi página html</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About me</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <p>hola este es un ejemplo.</p>
     <br>
     <p>Azul School es Chevere y Azul School es la onda.</p>
