Modified Footer HTML

--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
     <p>Azul School es Chevere y Azul School es la onda.</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta eligendi quae neque quos itaque ex, natus alias inventore nobis amet ratione impedit numquam beatae placeat, quo, dolores esse atque animi?</p>
     </main>
+    <footer>
+        <ul>
+            <li><a href="https://twitter.com/neosamness">Twitter</a></li>
+            <li><a href="https://github.com/AlejoMoralesX">GitHub</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
