--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
     <p>Azul School es Chevere y Azul School es la onda.</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta eligendi quae neque quos itaque ex, natus alias inventore nobis amet ratione impedit numquam beatae placeat, quo, dolores esse atque animi?</p>
     
+    <section>
+        <h3>Comida</h3>
+        <h4>Comida Guatemalteca</h4>
+        <img src="https://media.istockphoto.com/photos/closeup-of-guatemalan-cuisine-picture-id157186248" alt="Comida Guatemalteca">
+    </section>
 </body>
 </html>
