added hoobies to html

--- a/index.html
+++ b/index.html
@@ -24,9 +24,20 @@
     <p>Azul School es Chevere y Azul School es la onda.</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta eligendi quae neque quos itaque ex, natus alias inventore nobis amet ratione impedit numquam beatae placeat, quo, dolores esse atque animi?</p>    
     <section>
-        <h3>Comida</h3>
+        <article>
+            <h3>Comida</h3>
         <h4>Comida Guatemalteca</h4>
-        <img src="https://media.istockphoto.com/photos/closeup-of-guatemalan-cuisine-picture-id157186248" alt="Comida Guatemalteca">
+        <img src="https://media.istockphoto.com/photos/closeup-of-guatemalan-cuisine-picture-id157186248" alt="Comida Guatemalteca" width="400" height="300">
+        </article>
+        <article>
+            <h3>HOBBIES</h3>
+            <ul>
+                <li>Video juegos</li>
+                <li>Anime</li>
+                <li>Manga</li>
+                <li>Lectura</li>
+            </ul>
+        </article>
     </section>
     </main>
     <footer>
